<resources>
    <string name="app_name">Calculadora</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="producto">*</string>
    <string name="division">/</string>
    <string name="borrar">C</string>
    <string name="igual">=</string>
    <string name="input_text_number"></string>
    <string name="deg_rad">DEG</string>
    <string name="seno">sen</string>
    <string name="coseno">cos</string>
    <string name="tan">tan</string>
    <string name="punto">.</string>
</resources>
